quick contrast fix

--- a/src/components/LatestProjects.scss
+++ b/src/components/LatestProjects.scss
@@ -60,7 +60,7 @@
 			text-decoration: none;
 			padding: 10px 20px;
 			border-radius: 5px;
-			background-color: rgba($blue, 0.9);
+			background-color: rgba($blue, 0.95);
 			transition: all ease-out 0.15s;
 
 			&:hover {
