--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -54,7 +54,7 @@
 
 					&.active,
 					&:hover {
-						color: $blue;
+						color: #00689e;
 						transition: all ease-out 0.2s;
 					}
 				}
